# timejumpers

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  scancodes_macos.txt  scancodes_windows.txt
.github/workflows/: release.yml  rust.yml
assets/sprites/: Houston Back Walk cycle.xcf  Houston Front Walk cycle.xcf
assets/sprites/Effects/: Idle.anim  Slash effect test 1_0.controller  Slash.anim
src/: animation.rs  assets.rs  camera.rs  control.rs  damage.rs  enemy.rs  entities.rs  game.rs  keyboard.rs  lib.rs  main.rs  math.rs  multiplayer.rs  player.rs  projectile.rs
src/actors/: damage.rs  enemy.rs  mod.rs  player.rs  projectile.rs
src/graphics/: animation.rs
src/ui/: mod.rs
