[package]
name = "timejumpers"
version = "0.0.1"
edition = "2021"
description = "Jump between the timelines to save the world!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.bundle]
name = "Timejumpers"
identifier = "io.github.shakesbeare.timejumpers"
version = "0.0.1"
resources = ["assets"]
