[package]
name = "timejumpers"
version = "0.0.1"
edition = "2021"
rust-version = "1.73.0"
description = "Jump between the timelines to save the world!"
categories = ["game", "game-development"]
keywords = ["game", "game-development", "bevy", "rust"]
repository = "https://github.com/shakesbeare/timejumpers"
license = "GNU APGL v3.0"

[dependencies]
bevy = { version = "0.12.1" }
action_maps = "0.3.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.bundle]
name = "Timejumpers"
identifier = "io.github.shakesbeare.timejumpers"
version = "0.0.1"
resources = ["assets"]

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
